Fix alignment for longer text items on Appt Summary view

--- a/casn-frontend/casn-app/src/app/appointment-form/appointment-form.component.scss
+++ b/casn-frontend/casn-app/src/app/appointment-form/appointment-form.component.scss
@@ -138,3 +138,7 @@ form {
 .icon-small {
   font-size: 14px;
 }
+
+.align-right {
+  text-align: right;
+}
